Build and stability improvements using parent pom